[package]
name = "system_metrics"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "macros", "migrate"] }
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sysinfo = "0.36.0"
tokio = { version = "1.46.1", features = ["full"] }
tracing-subscriber = "0.3.19"
