[package]
name = "system_metrics"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "macros", "migrate", "chrono", "time"] }
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
time = { version = "0.3", features = ["serde"] }
sysinfo = "0.36.0"
tokio = { version = "1.46.1", features = ["full"] }
tracing-subscriber = "0.3.19"
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
chrono = { version="0.4.41", features= ["serde"]}
async-trait = "0.1.88"
